--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,4 @@
 # Auto detect text files and perform LF normalization
 * text=auto
+venv filter=lfs diff=lfs merge=lfs -text
+venv[[:space:]]copy filter=lfs diff=lfs merge=lfs -text
